Closed Bug 1838658 Opened 2 years ago Closed 2 years ago

Fix failing WPT canvas test 2d.text.font.parse.complex.html

Categories

(Core :: Graphics: Canvas2D, defect)

defect

Tracking

()

RESOLVED FIXED
116 Branch
Tracking Status
firefox116 --- fixed

People

(Reporter: jfkthame, Assigned: jfkthame)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

We currently fail the test /html/canvas/element/text-styles/2d.text.font.parse.complex.html because it expects the font family name Unknown Font to be quoted when the font attribute is re-serialized. However, the quotes are optional on such a name. So we should make the test accept either quoted or unquoted forms.

Assignee: nobody → jfkthame
Status: NEW → ASSIGNED

Hmm, correcting this test so that we'd expect to pass it revealed a separate bug in our offscreen-canvas impl: we ignore small-caps if it is present in the value of the font attribute. Adding a patch to fix that.

Attachment #9339349 - Attachment description: Bug 1838658 - Make family-name quotes optional in 2d.text.font.parse.complex test, and add a further test where quotes are required. r=#gfx-reviewers → Bug 1838658 - patch 2 - Make family-name quotes optional in 2d.text.font.parse.complex test, and add a further test where quotes are required. r=#gfx-reviewers
Pushed by jkew@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/55e098bcfd58 patch 1 - Handle the 'small-caps' variant when OffscreenCanvas is parsing and serializing the 'font' attribute. r=gfx-reviewers,lsalzman https://hg.mozilla.org/integration/autoland/rev/726c909740bf patch 2 - Make family-name quotes optional in 2d.text.font.parse.complex test, and add a further test where quotes are required. r=gfx-reviewers,lsalzman
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/40587 for changes under testing/web-platform/tests
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 116 Branch
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: