Bug 1838658 - patch 1 - Handle the 'small-caps' variant when OffscreenCanvas is parsing and serializing the 'font' attribute. r=gfx-reviewers,lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D181147